project architecture change

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,21 +1,22 @@
 ###############################################################################
-#                     ██████╗ ██╗██████╗ ███████╗██╗  ██╗                     #
-#                     ██╔══██╗██║██╔══██╗██╔════╝╚██╗██╔╝					  #
-#                     ██████╔╝██║██████╔╝█████╗   ╚███╔╝ 					  #
-#                     ██╔═══╝ ██║██╔═══╝ ██╔══╝   ██╔██╗ 				      #
-#                     ██║     ██║██║     ███████╗██╔╝ ██╗				      #
-#                     ╚═╝     ╚═╝╚═╝     ╚══════╝╚═╝  ╚═╝			          #
+#                     ██████╗ ██╗██████╗ ███████╗██╗  ██╗                     #       
+#                     ██╔══██╗██║██╔══██╗██╔════╝╚██╗██╔╝	              #
+#                     ██████╔╝██║██████╔╝█████╗   ╚███╔╝ 	              #
+#                     ██╔═══╝ ██║██╔═══╝ ██╔══╝   ██╔██╗ 	              #
+#                     ██║     ██║██║     ███████╗██╔╝ ██╗	              #
+#                     ╚═╝     ╚═╝╚═╝     ╚══════╝╚═╝  ╚═╝	              #
 ###############################################################################
 
+.SILENT: # Deixas de exibir as mensagens de execucao no terminal.
 NAME = pipex
 CC = cc
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror -g -fsanitize=address
 
 ###############################################################################
-#								MAKEFILE RULES								  #
+#				MAKEFILE RULES	                              #
 ###############################################################################
 
-FILES = ft_split.c utils.c utils2.c path.c main.c
+FILES = ./utils/ft_split.c ./utils/utils.c ./utils/utils2.c ./utils/path.c main.c
 OBJ = $(FILES:.c=.o)
 
 .c.o:
@@ -23,7 +24,7 @@ OBJ = $(FILES:.c=.o)
 
 
 ###############################################################################
-#								MAKEFILE COLORS								  #
+#				MAKEFILE COLORS				      #
 ###############################################################################
 
 CLR_RESET = \033[0m
@@ -32,7 +33,7 @@ GREEN = \033[0;32m
 PURPLE = \033[0;35m
 
 ###############################################################################
-#								MAKEFILE COMMANDS							  #
+#				MAKEFILE COMMANDS	    		      #
 ###############################################################################
 
 all: $(NAME)
