--- a/.gitignore
+++ b/.gitignore
@@ -304,7 +304,7 @@ tags
 # Virtualenv
 # http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
 [Bb]in
-[Ii]nclude
+#[Ii]nclude
 [Ll]ib
 [Ll]ib64
 [Ll]ocal
